--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "serve",
+    "serve": "serve --cors",
     "build": "esbuild index.js --bundle --minify --outfile=dist/script.js --watch"
   },
   "author": "",
